# parquetvector

./: .gitignore  utils_parquet.py
cpp/: CMakeLists.txt  pybind_test.cpp
docker/: Dockerfile  Singularity
jupyter/: test_segyio.ipynb
